--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,12 @@ next-env.d.ts
 
 
 # START Ruler Generated Files
+/.codex/config.json
+/.codex/config.json.bak
 /.codex/config.toml
 /.codex/config.toml.bak
+/.cursor/mcp.json
+/.cursor/mcp.json.bak
 /.cursor/rules/ruler_cursor_instructions.mdc
 /.cursor/rules/ruler_cursor_instructions.mdc.bak
 /AGENTS.md
