--- a/.ruler/ruler.toml
+++ b/.ruler/ruler.toml
@@ -38,3 +38,15 @@ default_agents = ["cursor", "codex"]
 # [mcp_servers.example_remote]
 # url = "https://api.example.com/mcp"
 # headers = { Authorization = "Bearer REPLACE_ME" }
+
+[mcp_servers.playwright]
+command = "npx"
+args = ["@playwright/mcp@latest"]
+
+[mcp_servers.shadcn]
+command = "npx"
+args = ["shadcn@latest", "mcp"]
+
+[mcp_servers.tosspayments-integration-guide]
+command = "npx"
+args = ["-y", "@tosspayments/integration-guide-mcp@latest"]
