--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.34.0",
     "@hookform/resolvers": "^4",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -16,6 +17,8 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -34,10 +37,13 @@
     "next": "15.1.0",
     "next-themes": "^0.4.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7",
+    "react-markdown": "^10.1.0",
     "react-use": "^17",
     "server-only": "0.0.1",
+    "svix": "^1.80.0",
     "ts-pattern": "^5",
     "zod": "^3",
     "zustand": "^4"
