chore: ruler 에 mcp server context7,  chrome-devtools 추가

--- a/.ruler/ruler.toml
+++ b/.ruler/ruler.toml
@@ -47,6 +47,14 @@ args = ["@playwright/mcp@latest"]
 command = "npx"
 args = ["shadcn@latest", "mcp"]
 
+[mcp_servers.context7]
+args = ["-y", "@upstash/context7-mcp"]
+command = "npx"
+
 [mcp_servers.tosspayments-integration-guide]
 command = "npx"
 args = ["-y", "@tosspayments/integration-guide-mcp@latest"]
+
+[mcp_servers.chrome-devtools]
+command = "npx"
+args = ["chrome-devtools-mcp@latest"]
