--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.34.0",
     "@hookform/resolvers": "^4",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -26,6 +27,7 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5",
+    "@tosspayments/tosspayments-sdk": "^2.4.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -45,6 +47,7 @@
     "server-only": "0.0.1",
     "svix": "^1.80.0",
     "ts-pattern": "^5",
+    "uuid": "^13.0.0",
     "zod": "^3",
     "zustand": "^4"
   },
@@ -55,6 +58,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
