--- a/package.json
+++ b/package.json
@@ -59,6 +59,10 @@
     "@playwright/test": "^1.48.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/typography": "^0.5.10",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.0",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -68,6 +72,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^4.1.13",
